Fixed datagrid for java 10+, basics of cache file explorer finished.